unpackaged/main/default/objects/Dictaminacion__c/Dictaminacion__c.object-meta.xml
<CustomObject>
    <label>Dictaminación</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dictaminación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>