unpackaged/main/default/objects/Dictaminacion__c/fields/A_os_Antig_edad__c.field-meta.xml
<CustomField>
    <fullName>A_os_Antig_edad__c</fullName>
    <label>Años Antigüedad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>