unpackaged/main/default/objects/Dictaminacion__c/fields/Accionista_3__c.field-meta.xml
<CustomField>
    <fullName>Accionista_3__c</fullName>
    <label>Accionista 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>