unpackaged/main/default/objects/Dictaminacion__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dictaminaciones</relationshipLabel>
    <relationshipName>Dictaminaciones</relationshipName>
    <type>Lookup</type>
</CustomField>