unpackaged/main/default/objects/Dictaminacion__c/fields/Area_Departamento__c.field-meta.xml
<CustomField>
    <fullName>Area_Departamento__c</fullName>
    <label>Área/Departamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>