unpackaged/main/default/objects/Dictaminacion__c/fields/Autoridad_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Identificacion__c</fullName>
    <label>Autoridad Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Identificacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Autoridad_Identificacion</valueSetName>
    </valueSet>
</CustomField>