unpackaged/main/default/objects/Dictaminacion__c/fields/Autoriza_la_utilizaci_n_de_informaci_n__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_la_utilizaci_n_de_informaci_n__c</fullName>
    <label>¿Autoriza la utilización de información?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>