unpackaged/main/default/objects/Dictaminacion__c/fields/C_dula_de_Identifiaci_n_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>C_dula_de_Identifiaci_n_Fiscal__c</fullName>
    <label>Cédula de Identificación Fiscal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>