unpackaged/main/default/objects/Dictaminacion__c/fields/Canal_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_venta__c</fullName>
    <label>Canal de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DIGITAL ASESOR</fullName>
            </value>
            <value>
                <fullName>EVENTO</fullName>
            </value>
            <value>
                <fullName>LLAMADA CALL CENTER</fullName>
            </value>
            <value>
                <fullName>MACROVENTA</fullName>
            </value>
            <value>
                <fullName>MEDIO PUBLICITARIO</fullName>
            </value>
            <value>
                <fullName>MEDIOS DIGITALES</fullName>
            </value>
            <value>
                <fullName>PROGRAMAS INSTITUCIONALES</fullName>
            </value>
            <value>
                <fullName>PROMOTOR EXTERNO</fullName>
            </value>
            <value>
                <fullName>PROSPECCION</fullName>
            </value>
            <value>
                <fullName>PROSPECTO ASESOR</fullName>
            </value>
            <value>
                <fullName>REFERIDOS</fullName>
            </value>
            <value>
                <fullName>VENTA EMPRESARIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>