unpackaged/main/default/objects/Dictaminacion__c/fields/Canal_de_venta_formula__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_venta_formula__c</fullName>
    <formula>TEXT(Oportunidad__r.Canal_de_venta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de venta</label>
    <type>Text</type>
</CustomField>