unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Antecedente_Compra__c.field-meta.xml
<CustomField>
    <fullName>CDC_Antecedente_Compra__c</fullName>
    <formula>IF(TEXT(Primera_Compra_en_JAVER__c) = &quot;No&quot;, 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este campo evalua la pregunta de la primera compra en Javer, si la respuesta es &quot;Sí&quot; la puntuación es 0.</inlineHelpText>
    <label>CDC-Antecedente Compra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>