unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Forma_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>CDC_Forma_de_Pago__c</fullName>
    <formula>CASE (TEXT( Forma_de_Pago__c),
						&quot;Sistema Financiero&quot;, 0,
      &quot;Organismo de Vivienda&quot;, 0,
      &quot;Efectivo menor a 100k mensual&quot;, 0,
      &quot;Efectivo mayor a 100k mensual&quot;,1,
						0
						)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDC-Forma de Pago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>