unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Lista_Negra__c.field-meta.xml
<CustomField>
    <fullName>CDC_Lista_Negra__c</fullName>
    <formula>IF( Estatus_LN__c = &quot;VALIDADO&quot;  || Estatus_LN__c = &quot;SIN VALIDADO&quot;, 0, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDC-Lista Negra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>