unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Monto_Operacion__c.field-meta.xml
<CustomField>
    <fullName>CDC_Monto_Operacion__c</fullName>
    <formula>IF( Oportunidad__r.Amount &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDC-Monto Operación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>