unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Origen_Recursos__c.field-meta.xml
<CustomField>
    <fullName>CDC_Origen_Recursos__c</fullName>
    <formula>IF(ISBLANK(TEXT(Es_usted_el_Titular_de_Recursos__c)), 0, 
     IF (TEXT(Es_usted_el_Titular_de_Recursos__c) = &quot;Si&quot;, 
				      IF( Tipo_de_Credito__c &lt;&gt; &quot;Contado&quot;, 
							       0 , 
							       2), 
							   3
			   )
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDC-Origen Recursos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>