unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Politicamente_Expuesto__c.field-meta.xml
<CustomField>
    <fullName>CDC_Politicamente_Expuesto__c</fullName>
    <formula>IF( TEXT(Persona_Politicamente_Expuesta__c) =&quot;Si&quot;, 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDC-Politicamente Expuesto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>