unpackaged/main/default/objects/Dictaminacion__c/fields/CDC_Score_Clasificacion_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CDC_Score_Clasificacion_del_Cliente__c</fullName>
    <formula>CDC_Antecedente_Compra__c +
	CDC_Lista_Negra__c +
	CDC_Monto_Operacion__c +
	CDC_Origen_Recursos__c +
	CDC_Forma_de_Pago__c +
	CDC_Politicamente_Expuesto__c +
	CDC_Lugar_de_Residencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDC-Score Clasificación del Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>