unpackaged/main/default/objects/Dictaminacion__c/fields/Check_Direcciones__c.field-meta.xml
<CustomField>
    <fullName>Check_Direcciones__c</fullName>
    <formula>IF( Tipo_Contribuyente_c__c = &quot;PERSONA FISICA&quot;, 
				 IF( Direcciones_Capturadas__c &gt;= 111, 
								 TRUE, 
								 FALSE),
				 IF( Direcciones_Capturadas__c &gt;= 11111, 
								 TRUE, 
								 FALSE)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Direcciones</label>
    <type>Checkbox</type>
</CustomField>