unpackaged/main/default/objects/Dictaminacion__c/fields/Check_Inf_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Check_Inf_Cliente__c</fullName>
    <formula>IF(Tipo_Contribuyente_c__c=&quot;PERSONA FISICA&quot;,
    NOT(
    ISBLANK(Fecha_de_Nacimiento__c) ||
    ISBLANK(Pais_de_Nacimiento__c) ||
    ISBLANK(Pais_de_Nacionalidad__c) ||
    ISBLANK(Sexo__c) ||
    ISBLANK(Estado_civil__c)
), FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Inf Cliente</label>
    <type>Checkbox</type>
</CustomField>