unpackaged/main/default/objects/Dictaminacion__c/fields/Check_Inf_Cliente_Moral__c.field-meta.xml
<CustomField>
    <fullName>Check_Inf_Cliente_Moral__c</fullName>
    <formula>IF(Tipo_Contribuyente_c__c=&quot;PERSONA MORAL&quot;,
			NOT(
							ISBLANK(Account__r.Name) ||
							ISBLANK( Account__r.Tipo_Contribuyente__c )||
							(ISBLANK( Account__r.TelefonoCelular__c ) &amp;&amp;	ISBLANK(Account__r.TelefonoOtro__c ))||
							ISBLANK (TEXT(Account__r.Estatus_Lista_Negra_QEQ__c))||
							ISBLANK (TEXT(Account__r.Canal_de_Venta__c ))||
							ISBLANK(TEXT( Account__r.Sub_canal_de_venta__c ))
			), FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Inf Cliente Moral</label>
    <type>Checkbox</type>
</CustomField>