unpackaged/main/default/objects/Dictaminacion__c/fields/Check_Inf_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Check_Inf_Laboral__c</fullName>
    <formula>IF (Tipo_Contribuyente_c__c=&#39;PERSONA FISICA&#39;,
NOT(
ISBLANK(Puesto__c) ||
ISBLANK(TEXT(R_gimen_Fiscal__c)) ||
ISNULL(Direccion_Laboral__c) ||
ISBLANK(Telefono_Trabajo__c) ||
ISBLANK(Extension__c) ||
ISBLANK(A_os_Antig_edad__c)
),
!ISBLANK(TEXT(R_gimen_Fiscal__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Información Laboral</label>
    <type>Checkbox</type>
</CustomField>