unpackaged/main/default/objects/Dictaminacion__c/fields/Check_Lista_de_Documentos_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Check_Lista_de_Documentos_Fisica__c</fullName>
    <formula>IF( AND( CHK_CURP__c, 
	        CHK_Alta_SHCP__c, 
	        CHK_Comprobante_de_Domicilio__c, 
	        CHK_Recibos_de_Nomina__c,
								 CHK_Identificacion_Oficial__c
								),
			 FALSE,
			 TRUE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Lista de Documentos P Física</label>
    <type>Checkbox</type>
</CustomField>