unpackaged/main/default/objects/Dictaminacion__c/fields/CHK_Comprobante_de_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>CHK_Comprobante_de_Domicilio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprobante de Domicilio</label>
    <type>Checkbox</type>
</CustomField>