unpackaged/main/default/objects/Dictaminacion__c/fields/Chk_Dictaminacion_Completa__c.field-meta.xml
<CustomField>
    <fullName>Chk_Dictaminacion_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Dictaminacion Completa</label>
    <type>Checkbox</type>
</CustomField>