unpackaged/main/default/objects/Dictaminacion__c/fields/CHK_Escritura__c.field-meta.xml
<CustomField>
    <fullName>CHK_Escritura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escritura</label>
    <type>Checkbox</type>
</CustomField>