unpackaged/main/default/objects/Dictaminacion__c/fields/CHK_Facultades_Servidor_Publico__c.field-meta.xml
<CustomField>
    <fullName>CHK_Facultades_Servidor_Publico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facultades Servidor Público</label>
    <type>Checkbox</type>
</CustomField>