unpackaged/main/default/objects/Dictaminacion__c/fields/CHK_Identificacion_Oficial__c.field-meta.xml
<CustomField>
    <fullName>CHK_Identificacion_Oficial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Identificación Oficial</label>
    <type>Checkbox</type>
</CustomField>