unpackaged/main/default/objects/Dictaminacion__c/fields/CHK_INE_Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>CHK_INE_Representante_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INE Representante Legal</label>
    <type>Checkbox</type>
</CustomField>