unpackaged/main/default/objects/Dictaminacion__c/fields/CHK_Recibos_de_Nomina__c.field-meta.xml
<CustomField>
    <fullName>CHK_Recibos_de_Nomina__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recibos de Nómina</label>
    <type>Checkbox</type>
</CustomField>