unpackaged/main/default/objects/Dictaminacion__c/fields/Clasificacion_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_del_Cliente__c</fullName>
    <label>Clasificación del Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto Riesgo</fullName>
            </value>
            <value>
                <fullName>Bajo Riesgo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>