unpackaged/main/default/objects/Dictaminacion__c/fields/Clasificacion_del_Cliente_Formula__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_del_Cliente_Formula__c</fullName>
    <formula>CASE(CDC_Score_Clasificacion_del_Cliente__c, 
						0,&quot;BAJO RIESGO&quot;,
						1,&quot;BAJO RIESGO&quot;,
						2,&quot;BAJO RIESGO&quot;,
						&quot;ALTO RIESGO&quot;
						)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clasificación del Cliente</label>
    <type>Text</type>
</CustomField>