unpackaged/main/default/objects/Dictaminacion__c/fields/Cliente_Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Fideicomiso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Fideicomiso</label>
    <type>Checkbox</type>
</CustomField>