unpackaged/main/default/objects/Dictaminacion__c/fields/CURP_Moral__c.field-meta.xml
<CustomField>
    <fullName>CURP_Moral__c</fullName>
    <label>CURP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>