unpackaged/main/default/objects/Dictaminacion__c/fields/Deseas_recibir_publicidad_sobre_Javer__c.field-meta.xml
<CustomField>
    <fullName>Deseas_recibir_publicidad_sobre_Javer__c</fullName>
    <label>¿Deseas recibir publicidad sobre Javer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>