unpackaged/main/default/objects/Dictaminacion__c/fields/Direccion_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Empresa__c</fullName>
    <label>Dirección Empresa</label>
    <length>250</length>
    <type>Text</type>
</CustomField>