unpackaged/main/default/objects/Dictaminacion__c/fields/Direcciones_Capturadas__c.field-meta.xml
<CustomField>
    <fullName>Direcciones_Capturadas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Direcciones Capturadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>