unpackaged/main/default/objects/Dictaminacion__c/fields/Director_General__c.field-meta.xml
<CustomField>
    <fullName>Director_General__c</fullName>
    <label>Director General</label>
    <length>100</length>
    <type>Text</type>
</CustomField>