unpackaged/main/default/objects/Dictaminacion__c/fields/Embajada_Consulado_Organismo_Intl__c.field-meta.xml
<CustomField>
    <fullName>Embajada_Consulado_Organismo_Intl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Embajada/Consulado/Organismo Internacional.</description>
    <label>Embajada/Consulado/Organismo Intl.</label>
    <type>Checkbox</type>
</CustomField>