unpackaged/main/default/objects/Dictaminacion__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>