unpackaged/main/default/objects/Dictaminacion__c/fields/Escritura_a_favor_de_un_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Escritura_a_favor_de_un_Tercero__c</fullName>
    <description>Cesión Vivienda</description>
    <label>¿Escritura a favor de un Tercero?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Firma_Directa_Cliente__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>