unpackaged/main/default/objects/Dictaminacion__c/fields/Estado_de_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Residencia__c</fullName>
    <label>Estado de Residencia</label>
    <length>80</length>
    <type>Text</type>
</CustomField>