unpackaged/main/default/objects/Dictaminacion__c/fields/Estatus_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Cliente__c</fullName>
    <formula>TEXT(Account__r.Estatus_Cliente__c)</formula>
    <label>Estatus Cliente</label>
    <type>Text</type>
</CustomField>