unpackaged/main/default/objects/Dictaminacion__c/fields/Estatus_Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Dictaminacion__c</fullName>
    <label>Estatus Dictaminación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Revisión</fullName>
                <default>true</default>
                <label>En Revisión</label>
            </value>
            <value>
                <fullName>Validado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>