unpackaged/main/default/objects/Dictaminacion__c/fields/Estatus_Proceso_de_Venta_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta_Oportunidad__c</fullName>
    <formula>TEXT(Oportunidad__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Proceso de Venta/Dictaminación</label>
    <type>Text</type>
</CustomField>