unpackaged/main/default/objects/Dictaminacion__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <inlineHelpText>Si no existe la extensión favor de colocar 0</inlineHelpText>
    <label>Extensión</label>
    <length>10</length>
    <type>Text</type>
</CustomField>