unpackaged/main/default/objects/Dictaminacion__c/fields/Fecha_de_Afluencia_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Afluencia_Virtual__c</fullName>
    <label>Fecha de Afluencia Virtual</label>
    <type>Date</type>
</CustomField>